ME_4600/MESDK/ME-3000/VC/me3000.h


_declspec(dllexport) int  _cdecl    me3000ErrorMessage(char *);

//
// General functions
//------------------------------
_declspec(dllexport) void _cdecl    me3000GeneralReset(int);

_declspec(dllexport) int  _cdecl    me3000GetInterrupts(int iBoardNumber, PME3000_ISR pInt);

_declspec(dllexport) int  _cdecl    me3000DLLBoardInfo(int, PME3000_BOARD_INFO);

_declspec(dllexport) int  _cdecl    me3000GetDLLVersion(void);

_declspec(dllexport) int  _cdecl    me3000GetDriverVersion(char *);

_declspec(dllexport) int  _cdecl    me3000GetDriverTimeStamp(char *);

_declspec(dllexport) int  _cdecl    me3000GetPCIConfiguration(int, PME_PLX9050_INFO);

_declspec(dllexport) int  _cdecl    me3000GetVECModel(int, int *);

_declspec(dllexport) int  _cdecl    me3000GetSerialNumber(int, int *);

_declspec(dllexport) int  _cdecl    me3000GetDriverStatus(int, PME3000_DRIVER_STATUS);

//
_declspec(dllexport) int  _cdecl    me3000Initialize(int);

//
// Analog input functions
//------------------------------
_declspec(dllexport) int  _cdecl    me3000AIClearChannelList(int);

_declspec(dllexport) int  _cdecl    me3000AIAddToChannelList(int, int);

//
_declspec(dllexport) int  _cdecl    me3000FileName(int, int, char *);

_declspec(dllexport) int  _cdecl    me3000FrequencyToCounter(double);

//
_declspec(dllexport) int  _cdecl    me3000AISetTimer(int, int, int);

_declspec(dllexport) int  _cdecl    me3000AISetTrigger(int, int);

//
_declspec(dllexport) int  _cdecl    me3000AIMakeChannelListEntry(int, int, int, int*);

//
_declspec(dllexport) int  _cdecl    me3000AISetSimultaneous(int, int);

//
_declspec(dllexport) int  _cdecl    me3000AIStop(int);

//
_declspec(dllexport) int  _cdecl    me3000AISingle(int, int, int, short *);

_declspec(dllexport) int  _cdecl    me3000AISingleEx(int, int, int, int,
                                                     int, short*, PSHORT_PROC);

//
_declspec(dllexport) int  _cdecl    me3000AIMultiple(int, short *, int, int);

_declspec(dllexport) int  _cdecl    me3000AIMultipleEx(int, short*, int, int,
                                                       int, int, P_1_PROC);

//
_declspec(dllexport) int  _cdecl    me3000AIQuick(int, short*, int, int);

_declspec(dllexport) int  _cdecl    me3000AIQuickEx(int, short*, int, int,
                                                    int, int, P_1_PROC);

//
_declspec(dllexport) int  _cdecl    me3000AIScan(int, short*, int, int, int);

_declspec(dllexport) int  _cdecl    me3000AIScanEx(int, short*, int, int, int,
                                                   int, int, P_1_PROC);

_declspec(dllexport) int  _cdecl    me3000AIContinuous(int, int, int, P_1_PROC);

//
_declspec(dllexport) int  _cdecl    me3000AIClearDataFIFO(int);

_declspec(dllexport) int  _cdecl    me3000AIReadFIFO(int, short*, int);

_declspec(dllexport) int  _cdecl    me3000AIStartByExternalTrigger(int, int);