ME_4600/MESDK/ME-3000/VBasic/ME3000.BAS


Declare Function me3000ErrorMessage Lib "me3000.dll" Alias "_VBme3000ErrorMessage@4" (ByVal lpBuffer As String) As Long
Declare Function me3000Initialize Lib "me3000.dll" Alias "_VBme3000Initialize@4" (ByVal lBoardNumber As Long) As Long
Declare Function me3000GeneralReset Lib "me3000.dll" Alias "_VBme3000GeneralReset@4" (ByVal lBoardNumber As Long) As Long
Declare Function me3000GetDLLVersion Lib "me3000.dll" Alias "_VBme3000GetDLLVersion@0" () As Long
Declare Function me3000GetDriverTimeStamp Lib "me3000.dll" Alias "_VBme3000GetDriverTimeStamp@4" (ByVal lpBuffer As String) As Long
Declare Function me3000GetDriverVersion Lib "me3000.dll" Alias "_VBme3000GetDriverVersion@4" (ByVal lpBuffer As String) As Long
Declare Function me3000GetSerialNumber Lib "me3000.dll" Alias "_VBme3000GetSerialNumber@8" (ByVal lBoardNumber As Long, ByRef lSerialNumber As Long) As Long
Declare Function me3000GetVECModel Lib "me3000.dll" Alias "_VBme3000GetVECModel@8" (ByVal lBoardNumber As Long, ByRef lMEVECModel As Long) As Long
Declare Function me3000GetInterrupts Lib "me3000.dll" Alias "_VBme3000GetInterrupts@8" (ByVal lBoardNumber As Long, ByRef pInt As ME3000_ISR) As Long
Declare Function me3000GetDriverStatus Lib "me3000.dll" Alias "_VBme3000GetDriverStatus@8" (ByVal lBoardNumber As Long, ByRef pStatus As ME3000_DRIVER_STATUS) As Long
Declare Function me3000GetPCIConfiguration Lib "me3000.dll" Alias "_VBme3000GetPCIConfiguration@8" (ByVal lBoardNumber As Long, ByRef pBoard As ME_PLX9050_INFO) As Long
Declare Function me3000DLLBoardInfo Lib "me3000.dll" Alias "_VBme3000DLLBoardInfo@8" (ByVal lBoardNumber As Long, ByRef pInfo As ME3000_BOARD_INFO) As Long
Declare Function me3000AIAddToChannelList Lib "me3000.dll" Alias "_VBme3000AIAddToChannelList@8" (ByVal lBoardNumber As Long, ByVal lEntry As Long) As Long
Declare Function me3000AIClearChannelList Lib "me3000.dll" Alias "_VBme3000AIClearChannelList@4" (ByVal lBoardNumber As Long) As Long
Declare Function me3000AIMakeChannelListEntry Lib "me3000.dll" Alias "_VBme3000AIMakeChannelListEntry@16" (ByVal lChannel As Long, ByVal lRange As Long, ByVal lMode As Long, ByRef plEntry As Long) As Long
Declare Function me3000FrequencyToCounter Lib "me3000.dll" Alias "_VBme3000FrequencyToCounter@8" (ByVal dFrequency As Double) As Long
Declare Function me3000FileName Lib "me3000.dll" Alias "_VBme3000FileName@12" (ByVal lBoardNumber As Long, ByVal lType As Long, ByVal lpBuffer As String) As Long
Declare Function me3000AISetTrigger Lib "me3000.dll" Alias "_VBme3000AISetTrigger@8" (ByVal lBoardNumber As Long, ByVal lModePolarity As Long) As Long
Declare Function me3000AISetTimer Lib "me3000.dll" Alias "_VBme3000AISetTimer@12" (ByVal lBoardNumber As Long, ByVal lScan As Long, ByVal lChan As Long) As Long
Declare Function me3000AISetSimultaneous Lib "me3000.dll" Alias "_VBme3000AISetSimultaneous@8" (ByVal lBoardNumber As Long, ByVal lMode As Long) As Long
Declare Function me3000AISingle Lib "me3000.dll" Alias "_VBme3000AISingle@16" (ByVal lBoardNumber As Long, ByVal lChannelNo As Long, ByVal lMode As Long, ByRef piValue As Integer) As Long
Declare Function me3000AIQuick Lib "me3000.dll" Alias "_VBme3000AIQuick@16" (ByVal lBoardNumber As Long, ByRef piBuffer As Integer, ByVal lCount As Long, ByVal lMode As Long) As Long
Declare Function me3000AIMultiple Lib "me3000.dll" Alias "_VBme3000AIMultiple@16" (ByVal lBoardNumber As Long, ByRef piBuffer As Integer, ByVal lCount As Long, ByVal lMode As Long) As Long
Declare Function me3000AIScan Lib "me3000.dll" Alias "_VBme3000AIScan@20" (ByVal lBoardNumber As Long, ByRef piBuffer As Integer, ByVal lSize As Long, ByVal lCount As Long, ByVal lMode As Long) As Long

Declare Function me3000AIContinuous Lib "me3000.dll" Alias "_VBme3000AIContinuous@16" (ByVal lBoardNumber As Long, ByVal lFrameSize As Long, ByVal lBufferSize As Long, ByVal pCallBack As Long) As Long

Declare Function me3000AIStop Lib "me3000.dll" Alias "_VBme3000AIStop@4" (ByVal lBoardNumber As Long) As Long
Declare Function me3000AISingleEx Lib "me3000.dll" Alias "_VBme3000AISingleEx@28" (ByVal lBoardNumber As Long, ByVal lChannel As Long, ByVal lMode As Long, ByVal lLoops As Long, ByVal lDelay As Long, ByRef piBuffer As Integer, ByVal pCallBack As Long) As Long
Declare Function me3000AIQuickEx Lib "me3000.dll" Alias "_VBme3000AIQuickEx@28" (ByVal lBoardNumber As Long, ByRef piBuffer As Integer, ByVal lCount As Long, ByVal lMode As Long, ByVal lLoops As Long, ByVal lDelay As Long, ByVal pCallBack As Long) As Long
Declare Function me3000AIMultipleEx Lib "me3000.dll" Alias "_VBme3000AIMultipleEx@28" (ByVal lBoardNumber As Long, ByRef piBuffer As Integer, ByVal lCount As Long, ByVal lMode As Long, ByVal lLoops As Long, ByVal lDelay As Long, ByVal pCallBack As Long) As Long
Declare Function me3000AIScanEx Lib "me3000.dll" Alias "_VBme3000AIScanEx@32" (ByVal lBoardNumber As Long, ByRef piBuffer As Integer, ByVal lSize As Long, ByVal lCount As Long, ByVal lMode As Long, ByVal lLoops As Long, ByVal lDelay As Long, ByVal pCallBack As Long) As Long

Declare Function me3000AIClearDataFIFO Lib "me3000.dll" Alias "_VBme3000AIClearDataFIFO@4" (ByVal lBoardNumber As Long) As Long
Declare Function me3000AIReadFIFO Lib "me3000.dll" Alias "_VBme3000AIReadFIFO@12" (ByVal lBoardNumber As Long, ByRef piBuffer As Integer, ByVal iCount As Long) As Long
Declare Function me3000AIStartByExternalTrigger Lib "me3000.dll" Alias "_VBme3000AIStartByExternalTrigger@8" (ByVal lBoardNumber As Long, ByVal iModePolarity As Long) As Long
